--- a/top/css/album.css
+++ b/top/css/album.css
@@ -101,12 +101,18 @@
     margin-bottom: 80px !important;
   }
 
+  .center {
+      margin: 0 auto;
+  }
+
 
 @media (max-width: 575.98px) {  }
 
 @media (min-width: 576px) and (max-width: 767.98px) { }
 
-@media (min-width: 768px) and (max-width: 991.98px) { }
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    
+}
 
 @media (min-width: 992px) and (max-width: 1199.98px) { }
 
