--- a/top/css/album.css
+++ b/top/css/album.css
@@ -10,6 +10,18 @@
       padding-bottom: 6rem;
     }
   }
+
+  .navbar {
+    position: fixed;
+    /*基準を画面の左上に*/
+    top: 0;
+    left: 0;
+    /*余白が入らないように*/
+    margin: 0;
+    /*以下装飾*/
+    width: 100%;
+    z-index: 99;
+  }
   
   .jumbotron p:last-child {
     margin-bottom: 0;
@@ -22,6 +34,11 @@
   .jumbotron .container {
     max-width: 40rem;
   }
+
+.blank- {
+  height: 300px;
+  animation-delay: 10s;
+}
   
   footer {
     padding-top: 3rem;
@@ -34,6 +51,17 @@
 
   h1 {
     margin-bottom: 0.3rem;
+  }
+
+  .h1-text {
+    margin-bottom: 0.3rem;
+    font-weight: 600;
+    margin-bottom: 0.3rem;
+    font-size: 2.5rem;
+  }
+
+  .h1-title-2 {
+    margin-bottom: 5rem;
   }
 
   h2 {
@@ -55,6 +83,76 @@
   h5 {
         font-size: 16px;
       font-weight: 400;
+  }
+
+  #scroll {
+    display: none;
+    padding-top: 50px;
+  }
+
+  .hop-text {
+    animation: hop .5s ease infinite alternate;
+  }
+  
+  @keyframes hop{
+    0% {transform: translateY(0px);}
+    100% {transform: translateY(-10px);}
+  }
+
+  a {
+    padding-top: 80px;
+  }
+  a span {
+    position: absolute;
+    top: 470px;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #1d19196b;
+    border-bottom: 1px solid #1d1919;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb 2s infinite;
+    animation: sdb 2s infinite;
+    opacity: 0;
+    box-sizing: border-box;
+  }
+  a span:nth-of-type(1) {
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+  }
+  a span:nth-of-type(2) {
+    top: 485px;
+    -webkit-animation-delay: .15s;
+    animation-delay: .15s;
+  }
+  a span:nth-of-type(3) {
+    top: 500px;
+    -webkit-animation-delay: .3s;
+    animation-delay: .3s;
+  }
+  @-webkit-keyframes sdb {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes sdb {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 
   .price {
