--- a/top/css/album.css
+++ b/top/css/album.css
@@ -58,6 +58,7 @@
     font-weight: 600;
     margin-bottom: 0.3rem;
     font-size: 2.5rem;
+    margin-top: 3rem;
   }
 
   .h1-title-2 {
@@ -87,7 +88,7 @@
 
   #scroll {
     display: none;
-    padding-top: 50px;
+    padding-top: 10px;
   }
 
   .hop-text {
@@ -104,7 +105,7 @@
   }
   a span {
     position: absolute;
-    top: 470px;
+    top: 510px;
     left: 50%;
     width: 24px;
     height: 24px;
@@ -123,12 +124,12 @@
     animation-delay: 0s;
   }
   a span:nth-of-type(2) {
-    top: 485px;
+    top: 525px;
     -webkit-animation-delay: .15s;
     animation-delay: .15s;
   }
   a span:nth-of-type(3) {
-    top: 500px;
+    top: 540px;
     -webkit-animation-delay: .3s;
     animation-delay: .3s;
   }
