スマホ画面対応

--- a/css/animate.css
+++ b/css/animate.css
@@ -3261,3 +3261,81 @@ body { /* Addresses a small issue in webkit: http://bit.ly/NEdoDq */
     -o-animation-duration: 0.75s;
     animation-duration: 0.75s;
 }
+
+.item{
+	opacity: 0;    
+  }
+
+  .item:nth-child(1) {
+	-webkit-animation: example 5.0s ease 0.5s 1 forwards;
+	animation: example 3.0s ease 1.0s 1 forwards;
+  }
+  .item:nth-child(2) {
+	-webkit-animation: example 5.0s ease 0.5s 1 forwards;
+	animation: example 3.0s ease 1.0s 1 forwards;
+  }
+  .item:nth-child(3) {
+	-webkit-animation: example 4.0s ease 1.5s 1 forwards;
+	animation: example 3.0s ease 2.0s 1 forwards;
+  }
+  .item:nth-child(4) {
+	-webkit-animation: example 4.0s ease 1.5s 1 forwards;
+	animation: example 3.0s ease 2.0s 1 forwards;
+  }
+  .item:nth-child(5) {
+	-webkit-animation: example 5.0s ease 2.5s 1 forwards;
+	animation: example 3.0s ease 3.0s 1 forwards;
+  }
+
+  @-webkit-keyframes example {
+	0% {
+		opacity: 0;
+	  }
+	100% {
+	  opacity: 1;
+	}
+  }
+  @keyframes example {
+	0% {
+		opacity: 0;
+	  }
+	100% {
+	  opacity: 1;
+	}
+  }
+
+  article {
+	overflow: hidden;
+	margin-bottom: 15px;
+  }
+
+  .example-left {
+	white-space: nowrap;
+	opacity: .6;
+	text-transform: uppercase;
+  }
+  
+  .example-left {
+	-webkit-animation: mymove 10s linear infinite; /* Safari 4.0 - 8.0 */
+	white-space: nowrap;
+	animation: mymove 10s linear infinite alternate;
+  }
+  
+  /* Safari 4.0 - 8.0 */
+  @-webkit-keyframes mymove {
+	from {
+	  left: 0;
+	}
+	to {
+	  left: -140px;
+	}
+  }
+  
+  @keyframes mymove {
+	from {
+	  left: 0;
+	}
+	to {
+	  left: -140px;
+	}
+  }
