--- a/top/css/album.css
+++ b/top/css/album.css
@@ -203,6 +203,15 @@ html body {
       width: 425px;
   }
 
+  .contents-card-img {
+    width: 100%;
+    height: 225px;
+  }
+  .contents-card-img2 {
+    width: 100%;
+    height: 40px;
+  }
+
   .top-height  {
     height: 70vh;
   }
@@ -268,6 +277,14 @@ html body {
       padding-bottom: 67px;
     }
 
+    .contents-card-img {
+      width: 80%;
+      height: 80%;
+    }
+    .contents-card-img2 {
+      width: 80%;
+      height: 17%;
+    }
     .mr-57 {
       margin-right: 0px;
       }
