--- a/top/css/album.css
+++ b/top/css/album.css
@@ -417,6 +417,7 @@ html body {
   .container-contents {
     margin-bottom: 350px;
     padding-top: 100px;
+    background-image: url(img/work-5382501_1280.jpg);
   }
 
   .container-contents-text {
